--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -111,7 +111,7 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rule1"
-        app:srcCompat="@drawable/poster" />
+        app:srcCompat="@color/colorSubtitle" />
 
     <TextView
         android:id="@+id/textView6"
